added newemployee function, and got it on the table

--- a/index.html
+++ b/index.html
@@ -63,6 +63,26 @@
             </div>
                 
         </div>
+
+        <div id="submit-button">
+            <button>Submit</button>
+        </div>
+
+        <div id="employee-table">
+            <table>
+                <tr>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>ID</th>
+                    <th>Title</th>
+                    <th>Annual Salary</th>
+                    <th> </th>
+                </tr>
+            </table>
+        </div>
+        <div class="total">
+            <p> Total </p>
+        </div>
     </div>
 </body>
 </html>
