trying to add up salaries

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div id="annual-salary">
                 <input
                     type="text"
-                    id="annual-salary-input"
+                    id="salary-input"
                     placeholder="Annual Salary"
                 />
             </div>
