added total to the DOM and made it divisable by 12

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </table>
         </div>
         <div class="total">
-            <p> Total </p>
+            <p id="total-salaries"> Total </p>
         </div>
     </div>
 </body>
