trying to change the monthly budget background color

--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
             <button>Submit</button>
         </div>
 
-        <div id="employee-table">
+        <div>
             <table>
+                <thead>
                 <tr>
                     <th>First Name</th>
                     <th>Last Name</th>
@@ -78,11 +79,39 @@
                     <th>Annual Salary</th>
                     <th> </th>
                 </tr>
+                </thead>
+                <tbody  id="employee-table">
+
+                </tbody>
             </table>
+            
         </div>
         <div class="total">
             <p id="total-salaries"> Total </p>
         </div>
     </div>
+            <!-- <table>
+                <thead>
+                    <tr>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>ID</th>
+                        <th>Title</th>
+                        <th>Annual Salary</th>
+                        <th> </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td> </td>
+                    </tr>
+                </tbody>
+                <tfoot>
+
+                </tfoot>
+            </table> -->
+
+
 </body>
 </html>
+
