fixed delete button, and made paragraph red if over budget

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
 
         <div>
-            <table>
+            <table class="center">
                 <thead>
                 <tr>
                     <th>First Name</th>
@@ -87,7 +87,9 @@
             
         </div>
         <div class="total">
-            <p id="total-salaries"> Total </p>
+            <span>
+             <p id="total-salaries"> Monthly Budget </p>
+            </span> 
         </div>
     </div>
             <!-- <table>
